# cyberfest

./: .gitignore  README.md  commands.txt  report.json
backend/: .env.example  package-lock.json  package.json
backend/src/: index.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  data.js  index.css
frontend/src/components/: AttackPath.jsx  Badge.jsx  FindingCard.jsx  Report.jsx  ScoreGauge.jsx  Stat.jsx
frontend/src/pages/: Dashboard.jsx  Landing.jsx  Scanning.jsx
frontend/src/utils/: pdf.js  report.js
specterapi/: demo.md  ghost_findings.json  pyproject.toml  requirements.txt  specterapi.py  technical_documentation.md
specterapi/core/: finding.py  http_client.py  output.py  repl.py  session.py
specterapi/modules/ghost/: __init__.py  crawler.py  prober.py  regex_sweep.py
specterapi/modules/idor/: __init__.py  differ.py  recorder.py  replayer.py
specterapi/modules/token/: __init__.py  discovery.py  pkce.py  redirect_uri.py
specterapi/reports/: ai_enricher.py  pdf_renderer.py
specterapi/specterapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
specterapi/wordlists/: african-telco.txt  api-endpoints.txt  oauth-paths.txt
